Added Menu to Sub Page

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 					<div class="logo-container">
 						<h1>FPC Code</h1>
 					</div>
-
 					<ul class="nav-links">
 						<li><a href="/" class="nav-link">Home</a></li>
-						<li><a href="#" class="nav-link">Join</a></li>
+						<li><a href="page.html" class="nav-link">Join</a></li>
 						<li><a href="#" class="nav-link">Services</a></li>
 						<li><a href="#" class="nav-link">About</a></li>
 						<li><a href="#" class="nav-link">Contact</a></li>
 					</ul>
-
 					<div class="burger">
 						<div class="line1"></div>
 						<div class="line2"></div>
@@ -48,7 +46,6 @@
 				</div>
 			</div>
 		</div>
-
 		<div id="learn" class="main-content-container">
 			<div class="main-content">
 				<div class="main-content-text">
@@ -69,7 +66,6 @@
 				<img src="learn_1.jpeg" alt="" />
 			</div>
 		</div>
-
 		<div id="web-design" class="main-content-container">
 			<div class="main-content">
 				<div class="main-content-text">
@@ -90,7 +86,6 @@
 				<img src="web_design_1.jpeg" alt="" />
 			</div>
 		</div>
-
 		<div id="project-highlights">
 			<div id="project-highlights-header">
 				<h1>Projects</h1>
