--- a/page.html
+++ b/page.html
@@ -8,25 +8,53 @@
 	</head>
 	<body>
 		<header>
-			<nav>
-				<div class="logo-container">
-					<h1>FPC Code</h1>
-				</div>
-
-				<ul class="nav-links">
-					<li><a href="/" class="nav-link">Home</a></li>
-					<li><a href="#" class="nav-link">Join</a></li>
-					<li><a href="#" class="nav-link">Services</a></li>
-					<li><a href="#" class="nav-link">About</a></li>
-					<li><a href="#" class="nav-link">Contact</a></li>
-				</ul>
-
-				<div class="burger">
-					<div class="line1"></div>
-					<div class="line2"></div>
-					<div class="line3"></div>
-				</div>
-			</nav>
+			<div class="header-background">
+				<nav>
+					<div class="logo-container">
+						<h1>FPC Code</h1>
+					</div>
+					<ul class="nav-links">
+						<li><a href="/" class="nav-link">Home</a></li>
+						<li><a href="page.html" class="nav-link">Join</a></li>
+						<li><a href="#" class="nav-link">Services</a></li>
+						<li><a href="#" class="nav-link">About</a></li>
+						<li><a href="#" class="nav-link">Contact</a></li>
+					</ul>
+					<div class="burger">
+						<div class="line1"></div>
+						<div class="line2"></div>
+						<div class="line3"></div>
+					</div>
+				</nav>
+			</div>
 		</header>
+		<div class="page-banner">
+			<img src="join_banner.jpeg" alt="" />
+			<div class="page-banner-content">
+				<div class="page-banner-text">
+					<div class="small-text">
+						<h1>Become A</h1>
+						<h1>Member</h1>
+					</div>
+					<div class="large-text">
+						<h1>Become A Member</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content-container">
+			<div class="content">
+				<div class="content-text">
+					<h1>Learn to Design and Develop</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
+						blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
+						mattis rhoncus urna neque viverra justo.
+					</p>
+				</div>
+			</div>
+		</div>
 	</body>
+	<script src="script.js"></script>
 </html>
