--- a/page.html
+++ b/page.html
@@ -35,8 +35,8 @@
 			<div class="page-banner-content">
 				<div class="page-banner-text">
 					<div class="small-text">
-						<h1>Become A</h1>
-						<h1>Member</h1>
+						<h1>Learn About</h1>
+						<h1>Our Club</h1>
 					</div>
 					<div class="large-text">
 						<h1>Become A Member</h1>
@@ -49,6 +49,7 @@
 				<div class="content-header">
 					<h1>Learn to Design and Develop</h1>
 				</div>
+				<div class="content-header-border"></div>
 				<div class="content-text">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -62,7 +63,7 @@
 	</body>
 	<footer>
 		<div class="footer-button">
-			<button onclick="redirect('#')">Join</button>
+			<button onclick="redirect('/')">Home</button>
 		</div>
 		<div class="footer-main-content">
 			<ul class="footer-nav-links">
