--- a/page.html
+++ b/page.html
@@ -47,7 +47,7 @@
 		<div class="content-container">
 			<div class="content">
 				<div class="content-header">
-					<h1>Learn to Design and Develop</h1>
+					<h1>Our Goal</h1>
 				</div>
 				<div class="content-header-border"></div>
 				<div class="content-text">
@@ -57,6 +57,34 @@
 						blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
 						mattis rhoncus urna neque viverra justo.
 					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
+						blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
+						mattis rhoncus urna neque viverra justo.
+					</p>
+				</div>
+			</div>
+			<div class="content">
+				<div class="content-header">
+					<h1>Meeting Information</h1>
+				</div>
+				<div class="content-header-border"></div>
+				<div class="content-list">
+					<ul>
+						<li>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.
+						</li>
+						<li>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.
+						</li>
+						<li>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
