Added Radio Button

--- a/page.html
+++ b/page.html
@@ -89,6 +89,7 @@
 			</div>
 			<div class="content-form">
 				<form action="">
+					<h1>Full Name</h1>
 					<div class="content-form-section">
 						<label for="fname">First Name</label>
 						<input type="text" name="firstname" id="fname" />
@@ -96,6 +97,29 @@
 					<div class="content-form-section">
 						<label for="lname">Last Name</label>
 						<input type="text" name="lastname" id="lname" />
+					</div>
+					<h1>Grade</h1>
+					<div class="content-form-radio-buttons">
+						<div class="content-form-radio-button">
+							<input type="radio" name="grade" id="grade9" />
+							<span class="checkmark"></span>
+							<label for="">9th Grade</label>
+						</div>
+						<div class="content-form-radio-button">
+							<input type="radio" name="grade" id="grade10" />
+							<span class="checkmark"></span>
+							<label for="">10th Grade</label>
+						</div>
+						<div class="content-form-radio-button">
+							<input type="radio" name="grade" id="grade11" />
+							<span class="checkmark"></span>
+							<label for="">11th Grade</label>
+						</div>
+						<div class="content-form-radio-button">
+							<input type="radio" name="grade" id="grade12" />
+							<span class="checkmark"></span>
+							<label for="">12th Grade</label>
+						</div>
 					</div>
 				</form>
 				<div class="content-form-border"></div>
